src/styl/extended-mraid.styl
@import "components.styl";
@import "gdpr-pop-up.styl";

$progress-bar-width = 60%;
$filling-bar-width = $progress-bar-width * .3;
$permissions-max-width = 300px;
$permissions-gray = #a6a6a6;
$camera-permission-panel-color = #fafafa;
$camera-permission-panel-height = 100vw;

#extended-mraid {

  .game-rating {
    position: relative;
    display: inline-block;
    color: $end-screen-info-gray;
    vertical-align: middle;
    letter-spacing: 5px;
    font-size: 20px;
  }

  .game-rating-mask {
    position: absolute;
    left: 0;
    overflow: hidden;
    width: 0;
    height: 100%;
    color: $rating-orange;
    white-space: nowrap;
    font-size: inherit;
  }

  .game-rating-count {
    color: $gray;
    font-size: 17px;
  }

  .game-icon {
    margin-bottom: 20px;
    width: 75px;
    height: 75px;
    border-radius: 18pt;
    background-color: $white;
    background-size: cover;
  }

  .unityads-logo {
    position: absolute;
    bottom: 10px;
    left: 50%;
    width: 68px;
    height: 16px;
    background-image: url("../img/unityads.png");
    background-position: center;
    background-size: cover;
    transform: translate(-50%, 0);
  }

  .name-container {
    overflow: hidden;
    color: $black;
    text-overflow: ellipsis;
    font-size: 17pt;
  }

  #mraid-iframe {
    $iframe-default();

    &.mraid-iframe-camera-permission-dialog {
      height: $camera-permission-panel-height;
    }
  }

  .close-region {
    $iframe-close-region-default();
    display: none;
  }

  .icon-close {
    position: absolute;
    top: 4px;
    right: 2px;
    width: 32px;
    height: 32px;
    color: $white;
    text-align: center;
    text-shadow: 2px 2px 20px $gray;
    font-size: 28px;
    line-height: 28px;
  }

  .close {
    position: absolute;
    top: 50%;
    left: 8px;
    width: 36px;
    height: 36px;
    transform: translate(0, -50%);
  }

  .progress-wrapper {
    position: absolute;
    clip: rect(0px, 36px, 36px, 18px);
    width: 36px;
    height: 36px;
  }

  .progress:after {
    position: absolute;
    top: 50%;
    left: 50%;
    display: block;
    color: $white;
    font-size: 18px;
    transform: translate(-50%, -50%);
  }

  .circle-base,
  .circle-left,
  .circle-right {
    position: absolute;
    width: 28px;
    height: 28px;
    border-radius: 100%;
    background-color: transparent;
    vertical-align: middle;
  }

  .circle-base {
    border: 4px solid $dark-gray;
  }

  .circle-left,
  .circle-right {
    clip: rect(0, 18px, 36px, 0);
    border: 4px solid $white;
  }

  .progress-wrapper,
  .circle-left,
  .circle-right {
    animation-duration: .01s;
    animation-iteration-count: 1;
    animation-fill-mode: forwards;
    animation-timing-function: linear;
  }

  .gdpr-pop-up {
    $gdpr-pop-up($default-scale-size);
  
    &.mraid-container {
      top: 100vw;
      bottom: inherit;
      z-index: 109;
    }
  }

  .privacy-button {
    $privacy-button-default($default-scale-size);
    left: 0;
    margin: 0 0 0 $default-size * $default-scale-size * .25;
  }

  .loading-screen,
  .loading-screen-ar,
  .camera-permission-panel {
    position: absolute;
    top: 0;
    left: 0;
    z-index: 100;
    display: none;
    width: 100vw;
    height: 100vh;
    background-color: $white;
    opacity: 1;

    &.hidden {
      opacity: 0;
      transition: opacity 200ms ease-out;
      pointer-events: none;
    }

    .container {
      position: absolute;
      top: 0;
      right: 0;
      bottom: 0;
      left: 0;
      display: flex;
      margin: auto;

      -webkit-box-orient: vertical;
      -webkit-box-direction: normal;
      -webkit-box-pack: center;
      -webkit-box-align: center;

      flex-direction: column;
      justify-content: center;

      .user-text,
      .game-icon,
      .store-container,
      .name-container,
      .progress-bar {
        align-self: center;
        margin: 10px;
      }

      .user-text,
      .name-container {
        text-align: center;
      }
    }

    .user-text {
      color: $black;
      font-weight: 300;
      font-size: 14.5pt;
    }

    .progress-bar {
      overflow: hidden;
      width: $progress-bar-width;
      height: 3pt;
      background-color: $end-screen-info-gray;

      .filling {
        position: relative;
        left: 0;
        display: block;
        width: $filling-bar-width;
        height: 5pt;
        background-color: $blue;
        backface-visibility: hidden;
        transform: translate3d(0, 0, 0);
        animation: progress-bar-dynamic 1s linear infinite;
        will-change: left;
      }
    }
  }

  .permissions-learn-more {
    $full-screen-pop-up-view($default-scale-size, 110);
    display: none;

    .centered-title {
      display: block;
      text-align: center;
    }

    .meta-link {
      display: inline-block;
      font-size: $default-font-size * .85;

      &+.meta-link {
        margin-left: 15pt;
      }
    }
  }

  .camera-permission-panel {
    position: absolute;
    top: $camera-permission-panel-height;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: 105;
    overflow: hidden;
    width: 100vw;
    height: inherit;
    background: $camera-permission-panel-color;

    .container {
      width: 80%;
      justify-content: center;
    }

    .permission-text {
      margin: 0 0 8px;
      text-align: center;
      font-size: $default-font-size * .85;
    }

    .arads-logo {
      margin: 0 auto 15px;
      width: 166.5px;
      height: 30px;
      background-image: url("../img/adsar.png");
      background-position: center;
      background-size: cover;
    }

    .permission-choice-buttons {
      display: flex;

      margin: 0 auto;
      max-width: 90%;
      width: 90%;

      -webkit-box-orient: horizontal;
      -webkit-box-direction: normal;
      -webkit-box-pack: center;
      -webkit-box-align: center;

      flex-direction: row;
      align-items: center;
      justify-content: space-around;
    }

    .permission-accept-button {
      $download-container-default($default-scale-size * .5, true);
      flex: 1;
      padding: .6375rem .35rem;
    }

    .permission-decline-button {
      $download-container-default($default-scale-size * .5, true);
      flex: 1;
      margin: 0 8px 0 0;
      padding: .6375rem .35rem;
      background: $permissions-gray;
      color: $white;
    }

    .gdpr-link {
      position: absolute;
      bottom: .5rem;
      left: .5rem;
    }

    .show-learn-more-button {
      position: absolute;
      right: .5rem;
      bottom: -.5rem;
    }

    .icon-gdpr,
    .icon-info {
      color: $permissions-gray;
      font-size: 1.25rem;
    }

    .icon-info-ar {
      color: $permissions-gray;
      font-size: 2.5rem;
    }
  }
}

.landscape {
  #extended-mraid {
    #mraid-iframe {
      &.mraid-iframe-camera-permission-dialog {
        width: 50vw;
        height: 100vh;
      }
    }

    .gdpr-pop-up {
      &.mraid-container {
        top: inherit;
        bottom: 0;
        width: 50vw;
      }
    }

    .camera-permission-panel {
      position: absolute;
      top: 0;
      right: 0;
      bottom: 0;
      left: 50vw;
      width: inherit;
      height: inherit;

      .container {
        width: 80%;
        justify-content: center;
      }

      .arads-logo {
        margin: 0 auto 5px;
      }

      .permission-text {
        padding: 0 8px;
        font-size: $default-font-size * .85;
      }

      .permission-choice-buttons {
        -webkit-box-orient: vertical;
        -webkit-box-direction: reverse;
        -webkit-box-pack: center;
        -webkit-box-align: center;

        flex-direction: column-reverse;
        align-items: center;
        justify-content: space-around;
      }

      .permission-decline-button {
        margin: 0;
      }

      .gdpr-link {
        display: none;
      }

      .show-learn-more-button {
        right: .5rem;
        bottom: -.5rem;
      }

      .permission-accept-button {
        margin: 0 auto 8px;
      }
    }
  }
}

@keyframes progress-bar-dynamic {
  0% {
    left: $filling-bar-width * -1;
  }

  30% {
    left: 55% - $filling-bar-width * .5;
  }

  32% {
    left: 53% - $filling-bar-width * .5;
  }

  35% {
    left: 35%;
  }

  37% {
    left: 38%;
  }

  42% {
    left: 51% - $filling-bar-width * .5;
  }

  45%, 60%, 70%, 80% {
    left: 50% - $filling-bar-width * .5;
  }

  90% {
    left: 80%;
  }

  100% {
    left: 100%;
  }
}

@keyframes progress-bar-dynamic {
  0% {
    left: $filling-bar-width * -1;
  }

  30% {
    left: 55% - $filling-bar-width * .5;
  }

  32% {
    left: 53% - $filling-bar-width * .5;
  }

  35% {
    left: 35%;
  }

  37% {
    left: 38%;
  }

  42% {
    left: 51% - $filling-bar-width * .5;
  }

  45%, 60%, 70%, 80% {
    left: 50% - $filling-bar-width * .5;
  }

  90% {
    left: 80%;
  }

  100% {
    left: 100%;
  }
}

@media screen and (min-aspect-ratio: 8/19) {
  #extended-mraid {
    #mraid-iframe {
      &.mraid-iframe-camera-permission-dialog {
        height: 120vw;
      }
    }

    .camera-permission-panel {
      top: 120vw;
    }

    .gdpr-pop-up {
      &.mraid-container {
        top: 120vw;
      }
    }
  }
}

@media screen and (min-aspect-ratio: 9/16) {
  #extended-mraid {
    #mraid-iframe {
      &.mraid-iframe-camera-permission-dialog {
        height: 100vw;
      }
    }

    .camera-permission-panel {
      top: 100vw;
    }

    .gdpr-pop-up {
      &.mraid-container {
        top: 100vw;
      }
    }
  }
}

@media screen and (min-aspect-ratio: 3/4) {
  #extended-mraid {
    #mraid-iframe {
      &.mraid-iframe-camera-permission-dialog {
        height: 70vw;
      }
    }

    .camera-permission-panel {
      top: 70vw;
    }

    .gdpr-pop-up {
      &.mraid-container {
        top: 70vw;
      }
    }
  }
}

@media screen and (min-aspect-ratio: 1/2) {
  #extended-mraid {
    #mraid-iframe {
      &.mraid-iframe-camera-permission-dialog {
        height: 100vw;
      }
    }

    .camera-permission-panel {
      top: 100vw;
    }

    .gdpr-pop-up {
      &.mraid-container {
        top: 100vw;
      }
    }
  }
}

@media screen and (min-aspect-ratio: 2/3) {
  #extended-mraid {
    #mraid-iframe {
      &.mraid-iframe-camera-permission-dialog {
        height: 80vw;
      }
    }

    .camera-permission-panel {
      top: 80vw;
    }

    .gdpr-pop-up {
      &.mraid-container {
        top: 80vw;
      }
    }
  }
}


@media screen and (min-aspect-ratio: 1/1) {
  .mraid {
    height: 50vw;
  }

  .panel {
    top: 50vw;
  }
}

@media screen and (min-height: 568px) {
  .loading-screen .game-icon {
    width: 96px;
    height: 96px;
  }
}

@media screen and (max-height: 240px) {
  .loading-screen {
    .container > div {
      margin: 3px;
    }

    .name-container {
      font-size: 12pt;
    }

    .game-rating {
      font-size: 10pt;
    }

    .user-text {
      font-size: 10.5pt;
    }
  }
}

// iPad
@media screen and (min-height: 768px) and (min-width: 1024px), screen and (min-height: 1024px) and (min-width: 768px) {
  .loading-screen {
    .user-text {
      font-size: 18.5pt;
    }
    .game-icon {
      width: 150px;
      height: 150px;
    }

    .progress-bar {
      width: $progress-bar-width * .8;
    }

    .game-rating {
      font-size: 20pt;
    }

    .name-container {
      font-size: 30pt;
    }

    .unityads-logo {
      bottom: 20px;
      width: 136px;
      height: 32px;
    }
  }
}

